--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,1 +1,15 @@
+[package]
+name = "llm-token-visualizer"
+version = "0.1.0"
+edition = "2021"
 
+[dependencies]
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+clap = { version = "4.0", features = ["derive"] }
+colored = "2.0"
+anyhow = "1.0"
+thiserror = "1.0"
+
+[dev-dependencies]
+tempfile = "3.0"
